--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -497,7 +497,7 @@ nav div:nth-of-type(3) {
   box-shadow: 0px 8px 80px 0px rgba(167, 167, 167, 0.24);
   padding-left: 3vw;
   padding-right: 3vw;
-  height: 52vh;
+  height: 60vh;
 }
 
 .start-box-one h2 {
@@ -602,7 +602,7 @@ nav div:nth-of-type(3) {
   text-align: left;
   padding-left: 3vw;
   padding-right: 3vw;
-  height: 52vh;
+  height: 60vh;
   box-shadow: 0px 8px 80px 0px rgba(5, 121, 107, 0.52);
 }
 
@@ -802,7 +802,7 @@ nav div:nth-of-type(3) {
 }
 
 footer {
-  margin-top: 10vh;
+  margin-top: 15vh;
 }
 
 footer section {
@@ -855,3 +855,5 @@ footer h3 {
   height: 2vh;
   margin-top: 3vh;
 }
+
+/* !! MEDIA QUERIES !! */
